Pint Changelog
==============

0.11 (unreleased)
-----------------

- Remove `default_en_0.6.txt`
- Reorganize long_description.
- Moved Pi to defintions files.
- Use ints (not floats) a defaults at many points in the codebase as in Python 3
  the true division is the default one.
- **BREAKING CHANGE**:
  Added `from_string` method to all Definitions subclasses. The value/converter
  argument of the constructor no longer accepts an string.
  It is unlikely that this change affects the end user.
- Added additional NumPy function implementations (allclose, intersect1d)
  (Issue #979, Thanks Jon Thielen)
- Allow constants in units by using a leading underscore (Issue #989, Thanks
  Juan Nunez-Iglesias)
- Fixed bug where to_compact handled prefix units incorrectly (Issue #960)

0.10.1 (2020-01-07)
-------------------

- Fixed bug introduced in 0.10 that prevented creation of size-zero Quantities
  from NumPy arrays by multiplication.
  (Issue #977, Thanks Jon Thielen)
- Fixed several Sphinx issues. Fixed intersphinx hooks to all classes missing.
  (Issue #881, Thanks Guido Imperiale)
- Fixed __array__ signature to match numpy docs (Issue #974, Thanks Ryan May)

0.10 (2020-01-05)
-----------------

- **BREAKING CHANGE**:
  Boolean value of Quantities with offsets units is ambiguous, and so, now a ValueError
  is raised when attempting to cast such a Quantity to boolean.
  (Issue #965, Thanks Jon Thielen)
- **BREAKING CHANGE**:
  `__array_ufunc__` has been implemented on `pint.Unit` to permit
  multiplication/division by units on the right of ufunc-reliant array types (like
  Sparse) with proper respect for the type casting hierarchy. However, until [an
  upstream issue with NumPy is resolved](https://github.com/numpy/numpy/issues/15200),
  this breaks creation of Masked Array Quantities by multiplication on the right.
  Read Pint's [NumPy support
  documentation](https://pint.readthedocs.io/en/latest/numpy.html) for more details.